# Shop_Assistant

./: .gitignore  CMakeLists.txt
data/LabelTemplates/: ThermalLabelTemplate.tiff
data/docs/: addProd_doc.json  docInfo.json
data/products/: prodInfo.json  products.json  products_data.db3
docs/: addProd_doc.json  docInfo.json
icons/: icons.qrc
include/: defs.h  ioWCharTDocs.hpp  json.hpp  utilities.h
include/UI/: MainWindow.h  UI.ui
include/UI/DataMatrixList/: DataMatrixList.h  DataMatrixList.ui
include/UI/Devices/BarcodeScanner/: BarcodeScanner.h  BarcodeScanner.ui
include/UI/MainWindow/: MainWindow.h  MainWindow.ui
include/UI/dialogues/: addGroup_dlg.h  deleteGroup_dlg.h  searchProduct_dlg.h
include/UI/productCard/: ProductCard.h  productCard.ui
include/UI/productTables/: ProductTables.h  ProductTables.ui
include/UI/thermalPrinter/: LabelThermalPrinter.h  thermalPrinter.ui
include/data/: Data.h  data.h
include/forms/: addProd_form.h  dialWindow_del.h  dialWindow_str.h  docJournal.h  docJournal_form.h  editProdGroup.h  edit_prodGroup_form.h  prodCard.h  prodTable.h  prod_card.h  product_form.h  receptFromTransit.h  receptFromTransit_form.h  termoPrint.h  thermalLabel_print.h
include/implementations/: implData.h  implForms.h
include/impls/: implData.h  implDevices.h
include/models/: objectTree_model.h
src/: CMakeLists.txt  Data.cpp  MainWindow.cpp  addProd_form.cpp  docJournal_form.cpp  editProdGroup.cpp  edit_prodGroup_form.cpp  main.cpp  objectTree_model.cpp  product_form.cpp  receptFromTransit.cpp  receptFromTransit_form.cpp  stb_image_write.cpp  utilities.cpp
src/UI/: BarcodeScanner.cpp  DataMatrixList.cpp  LabelThermalPrinter.cpp  MainWindow.cpp  ProductCard.cpp  ProductTables.cpp
src/UI/dialogues/: addGroup_dlg.cpp  deleteGroup_dlg.cpp  searchProduct_dlg.cpp
src/barcodeGen/core/: CMakeLists.txt
src/data/: data.cpp
src/forms/: dialWindow_del.cpp  dialWindow_str.cpp  docJournal.cpp  prodCard.cpp  prodTable.cpp  prod_card.cpp  termoPrint.cpp  thermalLabel_print.cpp
